--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "pre-commit>=4.2.0",
     "mlbnb>=0.1.1",
 ]
-requires-python = "==3.11.*"
+requires-python = ">=3.11.0"
 readme = "README.md"
 license = { text = "MIT" }
 
