--- a/src/config/data/cifar10.yaml
+++ b/src/config/data/cifar10.yaml
@@ -1,5 +1,5 @@
 dataset:
-  _target_: scaffolding_v3.data.cifar10.Cifar10Dataset
+  _target_: cdnp.data.cifar10.Cifar10Dataset
   _partial_: true
 in_channels: 3
 num_classes: 10
