--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "scaffolding-v3"
+name = "cdnp"
 version = "0.1.0"
 description = "Default template for PDM package"
 authors = [{ name = "Jonas Scholz", email = "jonas.scholz123@gmail.com" }]
