--- a/src/config/data/mnist.yaml
+++ b/src/config/data/mnist.yaml
@@ -1,5 +1,5 @@
 dataset:
-  _target_: scaffolding_v3.data.mnist.MnistDataset
+  _target_: cdnp.data.mnist.MnistDataset
   _partial_: true
 in_channels: 1
 num_classes: 10
