--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "ty>=0.0.1a3",
     "pre-commit>=4.2.0",
     "mlbnb>=0.1.1",
+    "diffusers>=0.33.1",
+    "accelerate>=1.7.0",
 ]
 requires-python = ">=3.11.0"
 readme = "README.md"
