Refactor model data preprocessing

--- a/src/config/mnist_ccd.yaml
+++ b/src/config/mnist_ccd.yaml
@@ -18,5 +18,7 @@ model:
 execution:
   epochs: 20
 
-optimizer:
-  lr: 3e-3
+data:
+  preprocess_fn:
+    _target_: cdnp.task.ccgen.preprocess
+    _partial_: true
