--- a/src/config/cifar10_ccgen.yaml
+++ b/src/config/cifar10_ccgen.yaml
@@ -1,24 +1,26 @@
 defaults:
   - base
-  - data: mnist
+  - data: cifar10
   - _self_
 
 model:
   model:
-    block_out_channels: [64, 128, 256]
+    block_out_channels: [128, 256, 512, 512]
     down_block_types:
       - DownBlock2D
+      - AttnDownBlock2D
       - AttnDownBlock2D
       - AttnDownBlock2D
     up_block_types:
       - AttnUpBlock2D
       - AttnUpBlock2D
+      - AttnUpBlock2D
       - UpBlock2D
   
 execution:
-  epochs: 20
+  epochs: 100
 
 data:
   preprocess_fn:
-    _target_: cdnp.task.ccgen.preprocess
+    _target_: cdnp.task.preprocess_ccgen
     _partial_: true
