--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,6 @@ repos:
     hooks:
       - id: pytest
         name: pytest
-        entry: pytest tests
+        entry: pytest tests/unit
         language: system
         pass_filenames: false
