--- a/src/config/base.yaml
+++ b/src/config/base.yaml
@@ -1,6 +1,7 @@
 defaults:
   - base_cfg
   - _self_
+  - data: mnist
   - mode: ???
   - override hydra/hydra_logging: disabled
   - override hydra/job_logging: disabled
@@ -15,11 +16,11 @@ paths:
   root: ${runtime.root}
   data: ${runtime.root}/_data
   raw_data: ${runtime.root}/_data/_raw
-  output: ${runtime.root}/_output
+  output: ${runtime.root}/_output/mnist_diffusion
   weights: ${runtime.root}/_weights
 
 execution:
-  epochs: ???
+  epochs: 100
   seed: 42
   start_from: LATEST
   start_weights: null
@@ -32,6 +33,16 @@ output:
   gradient_log_freq: 100
   use_tqdm: true
   log_level: INFO
+  plotter:
+   _target_: cdnp.plot.plotter.Plotter
+   _partial_: true
+   device: ${runtime.device}
+   num_samples: 2
+   num_classes: ${data.num_classes}
+   num_channels: ${data.in_channels}
+   sidelength: ${data.sidelength}
+   norm_means: ${data.dataset.norm_means}
+   norm_stds: ${data.dataset.norm_stds}
 
 rng:
   generator:
@@ -41,6 +52,9 @@ rng:
   cpu_generator:
     _target_: torch.Generator
     device: cpu
+
+loss:
+  _target_: torch.nn.NLLLoss
 
 model:
   _target_: cdnp.model.ddpm.DDPM
@@ -55,6 +69,17 @@ model:
     in_channels: ${data.in_channels}
     out_channels: ${data.in_channels}
     layers_per_block: 2
+    block_out_channels: [128, 256, 512, 512]
+    down_block_types:
+      - DownBlock2D
+      - AttnDownBlock2D
+      - AttnDownBlock2D
+      - AttnDownBlock2D
+    up_block_types:
+      - AttnUpBlock2D
+      - AttnUpBlock2D
+      - AttnUpBlock2D
+      - UpBlock2D
     num_class_embeds: ${data.num_classes}
     resnet_time_scale_shift: "scale_shift"
   loss_fn:
