--- a/src/config/base.yaml
+++ b/src/config/base.yaml
@@ -43,22 +43,14 @@ rng:
     device: cpu
 
 model:
-  _target_: cdnp.model.ddpm.DDPM
-  noise_scheduler:
-    _target_: diffusers.DDPMScheduler
-    num_train_timesteps: 1000
-    beta_schedule: "squaredcos_cap_v2"
   device: ${runtime.device}
-  model:
+  backbone:
     _target_: diffusers.UNet2DModel
     sample_size: ${data.sidelength}
     in_channels: ${data.in_channels}
     out_channels: ${data.in_channels}
     layers_per_block: 2
-    num_class_embeds: ${data.num_classes}
     resnet_time_scale_shift: "scale_shift"
-  loss_fn:
-    _target_: torch.nn.MSELoss
 
 optimizer:
   _target_: torch.optim.AdamW
