--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "mlbnb>=0.1.1",
     "diffusers>=0.33.1",
     "accelerate>=1.7.0",
+    "gdown>=5.2.0",
 ]
 requires-python = ">=3.11.0"
 readme = "README.md"
