Adjust inpainting fracs for celeba

--- a/src/config/celeba_inpaint.yaml
+++ b/src/config/celeba_inpaint.yaml
@@ -15,3 +15,6 @@ execution:
 
 data:
   in_channels: 7 # noised RGB image + masked RGB input + mask
+  preprocess_fn:
+    min_frac: 0.05
+    max_frac: 0.3
