--- a/src/config/cifar10_inpaint_cdnp.yaml
+++ b/src/config/cifar10_inpaint_cdnp.yaml
@@ -8,9 +8,9 @@ defaults:
 
 model:
   cnp:
-    backbone:
-      in_channels: 4 # masked RGB input + mask
-      out_channels: 6 # Mean + Std for each RGB channel
+    _target_: cdnp.util.instantiate.load_model_from_path
+    path: ${paths.weights}/2025-06-02_17-19_kind_bear
+    freeze: true # Freeze the trained CNP
   backbone:
     in_channels: 7 # noised RGB image + masked RGB input + mask
     out_channels: 3 # RGB image
