--- a/src/config/mnist_inpaint_cdnp.yaml
+++ b/src/config/mnist_inpaint_cdnp.yaml
@@ -7,13 +7,28 @@ defaults:
   - _self_
 
 model:
-  cnp:
-    _target_: cdnp.util.instantiate.load_model_from_path
-    path: ${paths.weights}/2025-05-28_10-29_kind_hippo
-    freeze: true # Freeze the trained CNP
   backbone:
     in_channels: 3 # noised greyscale image + masked input + mask
     out_channels: 1 # Just the greyscale image
+  cnp:
+    _target_: cdnp.model.cnp.CNP
+    device: ${runtime.device}
+    backbone:
+      _target_: diffusers.UNet2DModel
+      sample_size: ${data.sidelength}
+      layers_per_block: 2
+      resnet_time_scale_shift: "scale_shift"
+      in_channels: 2 # masked input + mask
+      out_channels: 2 # Predicted mean + std
+      block_out_channels: [64, 128, 256]
+      down_block_types:
+        - DownBlock2D
+        - AttnDownBlock2D
+        - AttnDownBlock2D
+      up_block_types:
+        - AttnUpBlock2D
+        - AttnUpBlock2D
+        - UpBlock2D
  
 execution:
   epochs: 20
