--- a/src/config/celeba_inpaint_cdnp.yaml
+++ b/src/config/celeba_inpaint_cdnp.yaml
@@ -15,7 +15,7 @@ model:
     path: ${paths.weights}/2025-06-02_20-40_lucky_xenon
     freeze: true # Freeze the trained CNP
   backbone:
-    in_channels: 7 # noised RGB image + masked RGB input + mask
+    in_channels: 13 # noised RGB image + masked RGB input + mask + CNP mean + CNP stddev
     out_channels: 3 # RGB image
   
 execution:
