--- a/src/config/era5_forecast_cnp.yaml
+++ b/src/config/era5_forecast_cnp.yaml
@@ -3,7 +3,7 @@ defaults:
   - data: era5
   - task: forecast
   - model: cnp
-  - model/backbone: swin
+  - model/backbone: big_no_attention
   - _self_
 
 model:
@@ -12,7 +12,9 @@ model:
     #in_channels: 201 # 2 context times * 82 variables + 5 static + 32 time embeds
     in_channels: 39 # 2 context times * 1 variables + 5 static + 32 time embeds
     #output_dimension: 164 # T2M mean and std * 82 trg variables
-    output_dimension: 2 # T2M mean and std * 1 trg variable
+    #output_dimension: 2 # T2M mean and std * 1 trg variable
+    out_channels: 2 # T2M mean and std * 1 trg variable
+  min_std: 0.05
   
 execution:
   epochs: 100
