Add torcheval (for FID)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "einops>=0.8.1",
     "cartopy>=0.24.1",
     "h5netcdf>=1.6.1",
+    "torcheval>=0.0.7",
 ]
 requires-python = ">=3.11.0"
 readme = "README.md"
