--- a/src/config/model/ddpm.yaml
+++ b/src/config/model/ddpm.yaml
@@ -1,7 +1,13 @@
-_target_: cdnp.model.ddpm.DDPM
-noise_scheduler:
-  _target_: diffusers.DDPMScheduler
-  num_train_timesteps: 1000
-  beta_schedule: "squaredcos_cap_v2"
-loss_fn:
-  _target_: torch.nn.MSELoss
+# @package _global_
+
+model:
+  _target_: cdnp.model.ddpm.DDPM
+  noise_scheduler:
+    _target_: diffusers.DDPMScheduler
+    num_train_timesteps: 1000
+    beta_schedule: "squaredcos_cap_v2"
+  loss_fn:
+    _target_: torch.nn.MSELoss
+
+execution:
+  ema_rate: 0.9999
