--- a/src/config/base.yaml
+++ b/src/config/base.yaml
@@ -52,14 +52,9 @@ model:
 optimizer:
   _target_: torch.optim.AdamW
   _partial_: true
-  lr: 3e-4
+  lr: 1e-4
 
-scheduler:
-  _target_: torch.optim.lr_scheduler.LinearLR
-  _partial_: true
-  start_factor: 1.0
-  end_factor: 0.0
-  total_iters: ${execution.epochs}
+scheduler: null
 
 data:
   cache: false
