--- a/src/config/celeba_inpaint.yaml
+++ b/src/config/celeba_inpaint.yaml
@@ -11,7 +11,7 @@ model:
     out_channels: 3 # RGB image
   
 execution:
-  epochs: 30
+  train_steps: 300000
 
 data:
   in_channels: 7 # noised RGB image + masked RGB input + mask
