--- a/src/config/era5_wind_forecast_cdnp.yaml
+++ b/src/config/era5_wind_forecast_cdnp.yaml
@@ -17,7 +17,7 @@ model:
     out_channels: 2 # U/V @ 10m predicted noise
   
 execution:
-  epochs: 100
+  train_steps: 50000
 
 data:
   trainloader:
