--- a/src/config/model/backbone/big.yaml
+++ b/src/config/model/backbone/big.yaml
@@ -9,16 +9,14 @@ model:
       - ${data.width}
     in_channels: ${data.in_channels}
     out_channels: ${data.in_channels}
-    layers_per_block: 2
+    layers_per_block: 4
     resnet_time_scale_shift: "scale_shift"
-    block_out_channels: [128, 256, 512, 512]
+    block_out_channels: [256, 256, 256]
     down_block_types:
       - DownBlock2D
       - AttnDownBlock2D
-      - AttnDownBlock2D
-      - AttnDownBlock2D
+      - DownBlock2D
     up_block_types:
-      - AttnUpBlock2D
-      - AttnUpBlock2D
+      - UpBlock2D
       - AttnUpBlock2D
       - UpBlock2D
