--- a/src/config/base.yaml
+++ b/src/config/base.yaml
@@ -33,7 +33,7 @@ output:
   log_gradients: false
   gradient_log_freq: 100
   save_freq: 5000
-  eval_freq: 5000
+  eval_freq: 10000
   plot_freq: 5000
   use_tqdm: true
   log_level: INFO
@@ -53,7 +53,7 @@ model:
   device: ${runtime.device}
 
 optimizer:
-  _target_: torch.optim.AdamW
+  _target_: torch.optim.Adam
   _partial_: true
   lr: 1e-4
 
