--- a/src/config/model/cdnp.yaml
+++ b/src/config/model/cdnp.yaml
@@ -1,9 +1,9 @@
 # @package _global_
 
 model:
-  _target_: cdnp.model.cdnp.CDNP
+  _target_: cdnp.model.cdnp_inverted.CDNP
   noise_scheduler:
-    _target_: cdnp.model.noise_scheduler.CDNPScheduler
+    _target_: diffusers.DDPMScheduler
     num_train_timesteps: 10
     beta_start: 0.0001
     beta_end: 0.5
