--- a/src/config/celeba_inpaint_cdnp.yaml
+++ b/src/config/celeba_inpaint_cdnp.yaml
@@ -7,6 +7,8 @@ defaults:
   - _self_
 
 model:
+  noise_scheduler:
+    num_train_timesteps: 20
   cnp:
     _target_: cdnp.util.instantiate.load_model_from_path
     path: ${paths.weights}/celeba_cnp
@@ -17,7 +19,7 @@ model:
   
 execution:
   train_steps: 300000
-  ema_rate: 0.99
+  ema_rate: 0.9995
 
 data:
   preprocess_fn:
@@ -25,7 +27,7 @@ data:
     max_frac: 0.1
   
 output:
-  plot_freq: 500
+  plot_freq: 1000
   metrics:
     - _target_: cdnp.evaluate.LossMetric
     - _target_: cdnp.evaluate.FIDMetric      
