Use original DDPM schedule

--- a/src/config/model/ddpm.yaml
+++ b/src/config/model/ddpm.yaml
@@ -5,7 +5,9 @@ model:
   noise_scheduler:
     _target_: diffusers.DDPMScheduler
     num_train_timesteps: 1000
-    beta_schedule: "squaredcos_cap_v2"
+    beta_schedule: "linear"
+    beta_start: 0.0001
+    beta_end: 0.02
   loss_fn:
     _target_: torch.nn.MSELoss
 
