--- a/src/config/cifar10_inpaint_cdnp.yaml
+++ b/src/config/cifar10_inpaint_cdnp.yaml
@@ -15,6 +15,10 @@ model:
     in_channels: 13 # noised RGB image + masked RGB input + mask + CNP mean + CNP stddev
     out_channels: 3 # RGB image
 
+data:
+  preprocess_fn:
+    min_frac: 0.1
+    max_frac: 0.1
 
 execution:
   train_steps: 50000
