--- a/src/config/cifar10_inpaint_cnp.yaml
+++ b/src/config/cifar10_inpaint_cnp.yaml
@@ -8,6 +8,9 @@ defaults:
 
 data:
   in_channels: 4 # masked RGB input + mask
+  preprocess_fn:
+    min_frac: 0.1
+    max_frac: 0.1
 
 model:
   backbone:
