--- a/src/config/celeba_inpaint.yaml
+++ b/src/config/celeba_inpaint.yaml
@@ -12,6 +12,17 @@ model:
   
 execution:
   train_steps: 300000
+  ema_rate: 0.9995
 
 data:
   in_channels: 7 # noised RGB image + masked RGB input + mask
+
+output:
+  plot_freq: 1000
+  metrics:
+    - _target_: cdnp.evaluate.LossMetric
+    - _target_: cdnp.evaluate.FIDMetric      
+      num_samples: 5000
+      means: ${data.dataset.norm_means}
+      stds: ${data.dataset.norm_stds}
+      device: ${runtime.device}
