--- a/src/config/era5_wind_forecast_cdnp.yaml
+++ b/src/config/era5_wind_forecast_cdnp.yaml
@@ -10,7 +10,7 @@ model:
   initial_std_mult: 20.0
   cnp:
     _target_: cdnp.util.instantiate.load_model_from_path
-    path: ${paths.weights}/2025-06-12_18-05_intelligent_dog
+    path: ${paths.weights}/2025-07-08_14-44_unique_giraffe
     freeze: true # Freeze the trained CNP
   backbone:
     in_channels: 47 # 2 context times * 2 variables + 5 static + 32 time embeds + 2 * CNP mean, std, sample
@@ -28,3 +28,6 @@ data:
 
 optimizer:
   lr: 1e-4
+
+output:
+  final_metrics: []
