--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "cartopy>=0.24.1",
     "h5netcdf>=1.6.1",
     "torcheval>=0.0.7",
+    "torchdiffeq>=0.2.5",
 ]
 requires-python = ">=3.11.0"
 readme = "README.md"
