--- a/src/config/cifar10_imgen_fm.yaml
+++ b/src/config/cifar10_imgen_fm.yaml
@@ -7,7 +7,8 @@ defaults:
 
 execution:
   train_steps: 300000
-  gradient_clip_norm: 1.0
+  gradient_clip_norm: 3.0
+  accumulate_steps: 4 # Effective batch size = 512, matching the repo
 
 output:
   metrics:
@@ -17,3 +18,11 @@ output:
       means: ${data.dataset.norm_means}
       stds: ${data.dataset.norm_stds}
       device: ${runtime.device}
+
+optimizer:
+  lr: 1e-4
+  betas: [0.9, 0.95]
+
+data:
+  trainloader:
+    batch_size: 128
