--- a/src/config/cifar10_inpaint_fm.yaml
+++ b/src/config/cifar10_inpaint_fm.yaml
@@ -19,6 +19,19 @@ output:
       means: ${data.dataset.norm_means}
       stds: ${data.dataset.norm_stds}
       device: ${runtime.device}
+      nfe: 50
+    - _target_: cdnp.evaluate.FIDMetric
+      num_samples: 1000
+      means: ${data.dataset.norm_means}
+      stds: ${data.dataset.norm_stds}
+      device: ${runtime.device}
+      nfe: 10
+    - _target_: cdnp.evaluate.FIDMetric
+      num_samples: 1000
+      means: ${data.dataset.norm_means}
+      stds: ${data.dataset.norm_stds}
+      device: ${runtime.device}
+      nfe: 5
 
 model:
   backbone:
