--- a/src/config/model/warm_start_fm.yaml
+++ b/src/config/model/warm_start_fm.yaml
@@ -3,5 +3,7 @@ defaults:
   - _self_
 
 _target_: cdnp.model.warm_start_diffusion.WarmStartDiffusion
+device: ${runtime.device}
 warm_start_model: ???
-std_mult: 1.0
+min_warmth: 1.0
+max_warmth: 1.0
