--- a/src/config/era5_forecast_cdnp.yaml
+++ b/src/config/era5_forecast_cdnp.yaml
@@ -12,6 +12,7 @@ model:
     _target_: cdnp.util.instantiate.load_model_from_path
     path: ${paths.weights}/2025-06-10_12-53_lucky_kangaroo
     freeze: true # Freeze the trained CNP
+    device: ${runtime.device}
   backbone:
     in_channels: 42 # 2 context times * 1 variables + 5 static + 32 time embeds + CNP mean, std, sample
     out_channels: 1 # T2M predicted noise
