--- a/src/config/era5_wind_forecast_cdnp.yaml
+++ b/src/config/era5_wind_forecast_cdnp.yaml
@@ -12,6 +12,7 @@ model:
     _target_: cdnp.util.instantiate.load_model_from_path
     path: ${paths.weights}/2025-07-08_14-44_unique_giraffe
     freeze: true # Freeze the trained CNP
+    device: ${runtime.device}
   backbone:
     in_channels: 47 # 2 context times * 2 variables + 5 static + 32 time embeds + 2 * CNP mean, std, sample
     out_channels: 2 # U/V @ 10m predicted noise
