--- a/src/config/celeba_inpaint_fm_warm.yaml
+++ b/src/config/celeba_inpaint_fm_warm.yaml
@@ -1,6 +1,6 @@
 defaults:
   - base
-  - data: cifar10
+  - data: celeba
   - task: inpaint
   - model: warm_start_fm
   - _self_
@@ -55,7 +55,5 @@ optimizer:
 
 data:
   trainloader:
-    batch_size: 128
-  preprocess_fn:
-    min_frac: 0.1
-    max_frac: 0.1
+    # TODO: Need to adjust number of accumulate steps?
+    batch_size: 32
