--- a/src/config/cifar10_inpaint_cnp.yaml
+++ b/src/config/cifar10_inpaint_cnp.yaml
@@ -3,7 +3,7 @@ defaults:
   - data: cifar10
   - task: inpaint
   - model: cnp
-  - model/backbone: big
+  - model/backbone: small
   - _self_
 
 data:
@@ -15,9 +15,9 @@ data:
 model:
   backbone:
     out_channels: 6 # Predicted RGB mean + predicted RGB stddev
-  min_std: 0.1 # Minimum stddev to stabilise
+  min_std: 0.01 # Minimum stddev to stabilise
   device: ${runtime.device}
 
 execution:
-  train_steps: 2000000
+  train_steps: 6000000
   gradient_clip_norm: 10.0
