--- a/src/config/generative_model/flow_matching.yaml
+++ b/src/config/generative_model/flow_matching.yaml
@@ -26,7 +26,7 @@ ode_opts:
   rtol: 1e-5
   nfe: 50
   step_size: null
-skip_type: "logSNR"
+skip_type: "time_uniform"
 num_channels: ${data.in_channels}
 height: ${data.height}
 width: ${data.width}
