Add min std to celeba cnp

--- a/src/config/celeba_inpaint_cnp.yaml
+++ b/src/config/celeba_inpaint_cnp.yaml
@@ -9,6 +9,7 @@ defaults:
 model:
   backbone:
     out_channels: 6 # RGB image * (mean + stddev)
+  min_std: 0.01 # Minimum std to stabilise
   
 execution:
   train_steps: 3000000
