--- a/src/config/cifar10_inpaint_fm.yaml
+++ b/src/config/cifar10_inpaint_fm.yaml
@@ -37,6 +37,7 @@ model:
   backbone:
     in_channels: 7 # noised RGB image + masked RGB input + mask + CNP mean + CNP stddev
     out_channels: 3 # RGB image
+  skip_type: edm
 
 
 optimizer:
