--- a/src/config/era5_wind_inpaint_cnp.yaml
+++ b/src/config/era5_wind_inpaint_cnp.yaml
@@ -7,7 +7,7 @@ defaults:
   - _self_
 
 model:
-  residual: true
+  residual: false
   backbone:
     in_channels: 9 # 2 context times * 2 variables + 5 static
     out_channels: 4 # T2M mean and std * 2 trg variables
