--- a/src/config/era5_wind_inpaint_cnp.yaml
+++ b/src/config/era5_wind_inpaint_cnp.yaml
@@ -9,7 +9,7 @@ defaults:
 model:
   residual: false
   backbone:
-    in_channels: 7 # 2 variables + 5 static
+    in_channels: 8 # 2 variables + 5 static + mask
     out_channels: 4 # mean and std * 2 trg variables
   min_std: 0.01
   
