--- a/src/config/era5_wind_inpaint_fm_warm.yaml
+++ b/src/config/era5_wind_inpaint_fm_warm.yaml
@@ -8,7 +8,7 @@ defaults:
 model:
   warm_start_model:
     _target_: cdnp.util.instantiate.load_model_from_path
-    path: ${paths.weights}/wind_forecast_cnp
+    path: ${paths.weights}/wind_inpaint_cnp
     checkpoint: best
     freeze: true
     device: ${runtime.device}
