--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "torchmetrics[image]>=1.7.4",
     "mlbnb>=0.1.3",
     "ty>=0.0.1a16",
+    "seaborn>=0.13.2",
 ]
 requires-python = ">=3.11.0"
 readme = "README.md"
