--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "cdnp"
 version = "0.1.0"
 description = "Default template for PDM package"
-authors = [{ name = "Jonas Scholz", email = "jonas.scholz123@gmail.com" }]
+authors = [{ name = "[redacted]", email = "[redacted]" }]
 dependencies = [
     "torch>=2.7.0",
     "torchvision>=0.19.0",
