--- a/src/config/cifar10_inpaint_fm_warm.yaml
+++ b/src/config/cifar10_inpaint_fm_warm.yaml
@@ -33,12 +33,41 @@ output:
       device: ${runtime.device}
       nfe: 5
 
+#model:
+  #warm_start_model:
+  #  _target_: cdnp.util.instantiate.load_model_from_path
+  #  path: ${paths.weights}/cifar10_cnp
+  #  freeze: true
+  #  device: ${runtime.device}
 model:
   warm_start_model:
     _target_: cdnp.util.instantiate.load_model_from_path
     path: ${paths.weights}/cifar10_cnp
-    freeze: true
+    freeze: false
+    #freeze: true
     device: ${runtime.device}
+  #warm_start_model:
+  #  _target_: cdnp.model.cnp.CNP
+  #  min_std: 0.01
+  #  backbone:
+  #    _target_: diffusers.UNet2DModel
+  #    sample_size:
+  #      - ${data.height}
+  #      - ${data.width}
+  #    in_channels: 4
+  #    layers_per_block: 2
+  #    resnet_time_scale_shift: "scale_shift"
+  #    block_out_channels: [64, 128, 256]
+  #    down_block_types:
+  #      - DownBlock2D
+  #      - AttnDownBlock2D
+  #      - AttnDownBlock2D
+  #    up_block_types:
+  #      - AttnUpBlock2D
+  #      - AttnUpBlock2D
+  #      - UpBlock2D
+  #    out_channels: 6 # Predicted RGB mean + predicted RGB stddev
+  #  device: ${runtime.device}
   generative_model:
     backbone:
       in_channels: 13 # noised RGB image + masked RGB input + mask + CNP mean + CNP stddev
